DRS-13: Basic Setup: docker-compose-de.yml: redis: restart: always

--- a/DoorsServerMonolith/docker-compose-dev.yml
+++ b/DoorsServerMonolith/docker-compose-dev.yml
@@ -31,6 +31,7 @@ services:
 
   redis:
     image: 'bitnami/redis:5.0'
+    restart: always
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       ALLOW_EMPTY_PASSWORD: 1
