--- a/DoorsServerMonolith/.swiftpm/xcode/xcshareddata/xcschemes/DoorsServerMonolith.xcscheme
+++ b/DoorsServerMonolith/.swiftpm/xcode/xcshareddata/xcschemes/DoorsServerMonolith.xcscheme
@@ -91,7 +91,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "serve --port 8090"
+            argument = "serve -b 0.0.0.0:8090"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
