DRS-13.1: api.doorsid.com: Project restructure

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=vapor_username
 DATABASE_PASSWORD=vapor_password
 DATABASE_NAME=doors_database
-SITE_FRONTEND_URL="localhost:8090"
-SITE_API_URL="localhost:8090/api"
+SITE_FRONTEND_URL="localhost:8100"
+SITE_API_URL="localhost:8100"
 NO_REPLY_EMAIL="No Reply"
 MAILGUN_API_KEY=""
