--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,3 @@
-# Docker Compose file for Vapor
-#
-# Install Docker on your system to run and test
-# your Vapor app in a production-like environment.
-#
-# Note: This file is intended for testing and does not
-# implement best practices for a production deployment.
-#
-# Learn more: https://docs.docker.com/compose/reference/
-#
-#   Build images: docker-compose build
-#      Start app: docker-compose up app
-# Start database: docker-compose up db
-# Run migrations: docker-compose run migrate
-#       Stop all: docker-compose down (add -v to wipe db)
-#
 version: '3.7'
 
 volumes:
@@ -27,8 +11,9 @@ x-shared_environment: &shared_environment
   DATABASE_PASSWORD: vapor_password
 
 services:
-  app:
-    image: DoorsServerMonolith:latest
+
+  api.doorsid.com-app:
+    image: api.doorsid.com:latest
     build:
       context: .
     environment:
@@ -36,11 +21,12 @@ services:
     depends_on:
       - db
     ports:
-      - '8080:8080'
+      - '8070:8070'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
-  migrate:
-    image: DoorsServerMonolith:latest
+    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8070"]
+
+  api.doorsid.com-migrate:
+    image: api.doorsid.com:latest
     build:
       context: .
     environment:
@@ -50,8 +36,9 @@ services:
     command: ["migrate", "--yes"]
     deploy:
       replicas: 0
-  revert:
-    image: DoorsServerMonolith:latest
+
+  api.doorsid.com-revert:
+    image: api.doorsid.com:latest
     build:
       context: .
     environment:
@@ -61,14 +48,40 @@ services:
     command: ["migrate", "--revert", "--yes"]
     deploy:
       replicas: 0
+
   db:
-    image: postgres:12-alpine
+    image: postgres
     volumes:
       - db_data:/var/lib/postgresql/data/pgdata
+    restart: always
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_DB: doors_database
       POSTGRES_USER: vapor_username
       POSTGRES_PASSWORD: vapor_password
-      POSTGRES_DB: doors_database
     ports:
-      - '5432:5432'
+      - 5432:5432
+
+  redis:
+    image: 'bitnami/redis:5.0'
+    restart: always
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      ALLOW_EMPTY_PASSWORD: 1
+      REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
+    ports:
+      - 6379:6379
+
+  api.doorsid.com-nginx:
+    container_name: api.doorsid.com-nginx
+    image: nginx
+    restart: always
+    volumes:
+      - "./default.conf:/etc/nginx/conf.d/default.conf"
+    environment:
+      - VIRTUAL_HOST=api.doorsid.com
+      - VIRTUAL_PORT=80
+      - LETSENCRYPT_HOST=api.doorsid.com
+      - LETSENCRYPT_EMAIL=mail@doorsid.com
+    expose:
+      - 80
