--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,29 +25,29 @@ services:
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8070"]
 
-  api.doorsid.com-migrate:
-    image: api.doorsid.com:latest
-    build:
-      context: .
-    environment:
-      <<: *shared_environment
-    depends_on:
-      - db
-    command: ["migrate", "--yes"]
-    deploy:
-      replicas: 0
-
-  api.doorsid.com-revert:
-    image: api.doorsid.com:latest
-    build:
-      context: .
-    environment:
-      <<: *shared_environment
-    depends_on:
-      - db
-    command: ["migrate", "--revert", "--yes"]
-    deploy:
-      replicas: 0
+  # api.doorsid.com-migrate:
+  #   image: api.doorsid.com:latest
+  #   build:
+  #     context: .
+  #   environment:
+  #     <<: *shared_environment
+  #   depends_on:
+  #     - db
+  #   command: ["migrate", "--yes"]
+  #   deploy:
+  #     replicas: 0
+  #
+  # api.doorsid.com-revert:
+  #   image: api.doorsid.com:latest
+  #   build:
+  #     context: .
+  #   environment:
+  #     <<: *shared_environment
+  #   depends_on:
+  #     - db
+  #   command: ["migrate", "--revert", "--yes"]
+  #   deploy:
+  #     replicas: 0
 
   db:
     image: postgres
