--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 volumes:
   db_data:
@@ -40,6 +40,7 @@ services:
   api.doorsid.com-app:
     image: api.doorsid.com:latest
     container_name: api.doorsid.com-app
+    restart: always
     build:
       context: .
     environment:
@@ -49,7 +50,7 @@ services:
     ports:
       - 8070:8080
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8070"]
+    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
 
   # api.doorsid.com-migrate:
   #   image: api.doorsid.com:latest
