--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
       POSTGRES_USER: vapor_username
       POSTGRES_PASSWORD: vapor_password
     ports:
-      - 5432:5432
+      - '5432:5432'
 
   redis:
-    image: 'bitnami/redis:5.0'
+    image: bitnami/redis:5.0
     container_name: redis
     restart: always
     environment:
@@ -35,7 +35,7 @@ services:
       ALLOW_EMPTY_PASSWORD: 1
       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
     ports:
-      - 6379:6379
+      - '6379:6379'
 
   api.doorsid.com-app:
     image: api.doorsid.com:latest
@@ -48,7 +48,7 @@ services:
     depends_on:
       - db
     ports:
-      - 8070:8080
+      - '8080:8080'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
 
