DRS-13: Basic Setup: Docker: docker-compose.yml: Add default network "api.doorsid.com-network"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,3 +75,6 @@ services:
   #   command: ["migrate", "--revert", "--yes"]
   #   deploy:
   #     replicas: 0
+networks:
+  default:
+    name: api.doorsid.com-network
