--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 x-shared_environment: &shared_environment
   LOG_LEVEL: ${LOG_LEVEL:-debug}
   DATABASE_HOST: db
-  DATABASE_NAME: vapor_database
+  DATABASE_NAME: doors_database
   DATABASE_USERNAME: vapor_username
   DATABASE_PASSWORD: vapor_password
 
