DRS-13: Basic Setup: Docker: docker-compose.yml: Update .env files. Remove api.doorsid.com-network network

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=vapor_username
 DATABASE_PASSWORD=vapor_password
 DATABASE_NAME=doors_database
-SITE_FRONTEND_URL="https://dev.doorsid-com.recolourmusic.com"
-SITE_API_URL="https://dev.api.doorsid-com.recolourmusic.com"
+SITE_FRONTEND_URL="https://doorsid.com"
+SITE_API_URL="https://api.doorsid.com"
 NO_REPLY_EMAIL="No Reply"
 MAILGUN_API_KEY=""
