--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     restart: always
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      ALLOW_EMPTY_PASSWORD: 1
+      # ALLOW_EMPTY_PASSWORD: 1
       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
     ports:
       - '6379:6379'
@@ -48,7 +48,7 @@ services:
     depends_on:
       - db
     ports:
-      - '8080:8080'
+      - '8070:8080'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
 
@@ -75,6 +75,3 @@ services:
   #   command: ["migrate", "--revert", "--yes"]
   #   deploy:
   #     replicas: 0
-networks:
-  default:
-    name: api.doorsid.com-network
