DRS-13.2: Basic Setup: Environments: Update .env files. Put keypair.jwks at /ProtectedResources + Correspond Dockerfile update

--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,4 @@ SITE_FRONTEND_URL="https://doorsid.com"
 SITE_API_URL="https://api.doorsid.com"
 NO_REPLY_EMAIL="No Reply"
 MAILGUN_API_KEY=""
+JWKS_KEYPAIR_FILE="ProtectedResources/keypair.jwks"
