--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ SITE_FRONTEND_URL="https://dev.doorsid-com.recolourmusic.com"
 SITE_API_URL="https://dev.api.doorsid-com.recolourmusic.com"
 NO_REPLY_EMAIL="No Reply"
 MAILGUN_API_KEY=""
+JWKS_KEYPAIR_FILE="ProtectedResources/keypair.jwks"
