--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,30 +12,30 @@ x-shared_environment: &shared_environment
 
 services:
 
-  # db:
-  #   image: postgres
-  #   container_name: db
-  #   volumes:
-  #     - db_data:/var/lib/postgresql/data/pgdata
-  #   restart: always
-  #   environment:
-  #     PGDATA: /var/lib/postgresql/data/pgdata
-  #     POSTGRES_DB: doors_database
-  #     POSTGRES_USER: vapor_username
-  #     POSTGRES_PASSWORD: vapor_password
-  #   ports:
-  #     - '5432:5432'
-  #
-  # redis:
-  #   image: bitnami/redis:5.0
-  #   container_name: redis
-  #   restart: always
-  #   environment:
-  #     # ALLOW_EMPTY_PASSWORD is recommended only for development.
-  #     # ALLOW_EMPTY_PASSWORD: 1
-  #     REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
-  #   ports:
-  #     - '6379:6379'
+  db:
+    image: postgres
+    container_name: db
+    volumes:
+      - db_data:/var/lib/postgresql/data/pgdata
+    restart: always
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_DB: doors_database
+      POSTGRES_USER: vapor_username
+      POSTGRES_PASSWORD: vapor_password
+    ports:
+      - '5432:5432'
+
+  redis:
+    image: bitnami/redis:5.0
+    container_name: redis
+    restart: always
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      # ALLOW_EMPTY_PASSWORD: 1
+      REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
+    ports:
+      - '6379:6379'
 
   api.doorsid.com-app:
     image: api.doorsid.com:latest
