--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,6 @@ volumes:
 
 x-shared_environment: &shared_environment
   LOG_LEVEL: ${LOG_LEVEL:-debug}
-  DATABASE_HOST: db
-  DATABASE_NAME: doors_database
-  DATABASE_USERNAME: vapor_username
-  DATABASE_PASSWORD: vapor_password
 
 services:
 
@@ -20,9 +16,9 @@ services:
     restart: always
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
-      POSTGRES_DB: doors_database
-      POSTGRES_USER: vapor_username
-      POSTGRES_PASSWORD: vapor_password
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
       - '5432:5432'
 
