DRS-13.2: Basic Setup: Environments: Redis password

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,10 @@
-DATABASE_HOST=localhost
+DATABASE_HOST="localhost"
 DATABASE_PORT=5432
-DATABASE_USERNAME=vapor_username
-DATABASE_PASSWORD=vapor_password
-DATABASE_NAME=doors_database
+DATABASE_USERNAME="vapor_username"
+DATABASE_PASSWORD="vapor_password"
+DATABASE_NAME="doors_database"
+REDIS_PASSWORD="redis_password"
+REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
 SITE_FRONTEND_URL="https://dev.doorsid-com.recolourmusic.com"
 SITE_API_URL="https://dev.api.doorsid-com.recolourmusic.com"
 NO_REPLY_EMAIL="No Reply"
