--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,10 @@
-DATABASE_HOST=localhost
+DATABASE_HOST="localhost"
 DATABASE_PORT=5432
-DATABASE_USERNAME=vapor_username
-DATABASE_PASSWORD=vapor_password
-DATABASE_NAME=doors_database
+DATABASE_USERNAME="vapor_username"
+DATABASE_PASSWORD="vapor_password"
+DATABASE_NAME="doors_database"
+REDIS_PASSWORD="redis_password"
+REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
 SITE_FRONTEND_URL="https://doorsid.com"
 SITE_API_URL="https://api.doorsid.com"
 NO_REPLY_EMAIL="No Reply"
