--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  db_data:
+
 services:
 
   db:
@@ -22,7 +25,8 @@ services:
     restart: always
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      ALLOW_EMPTY_PASSWORD: 1
+      # ALLOW_EMPTY_PASSWORD: 1
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
     ports:
       - '6379:6379'
