DRS-13.2: Basic Setup: Environments: Redis URL

--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,10 @@ DATABASE_PORT=5432
 DATABASE_USERNAME="vapor_username"
 DATABASE_PASSWORD="vapor_password"
 DATABASE_NAME="doors_database"
+REDIS_USERNAME=""
 REDIS_PASSWORD="redis_password"
-REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
+REDIS_HOST="localhost"
+REDIS_PORT=6379
 SITE_FRONTEND_URL="https://doorsid.com"
 SITE_API_URL="https://api.doorsid.com"
 NO_REPLY_EMAIL="No Reply"
