--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,10 @@ DATABASE_PORT=5432
 DATABASE_USERNAME="vapor_username"
 DATABASE_PASSWORD="vapor_password"
 DATABASE_NAME="doors_database"
+REDIS_USERNAME=""
 REDIS_PASSWORD="redis_password"
-REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
+REDIS_HOST="localhost"
+REDIS_PORT=6379
 SITE_FRONTEND_URL="https://dev.doorsid-com.recolourmusic.com"
 SITE_API_URL="https://dev.api.doorsid-com.recolourmusic.com"
 NO_REPLY_EMAIL="No Reply"
