--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,7 +28,7 @@ services:
     restart: always
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      # ALLOW_EMPTY_PASSWORD: 1
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
     ports:
       - '6379:6379'
