DRS-13.2: Basic Setup: Environments: Use ' instead of ". Add staging

--- a/.env.production
+++ b/.env.production
@@ -1,14 +1,17 @@
-DATABASE_HOST="localhost"
-DATABASE_PORT=5432
-DATABASE_USERNAME="vapor_username"
-DATABASE_PASSWORD="vapor_password"
-DATABASE_NAME="doors_database"
-REDIS_USERNAME=""
-REDIS_PASSWORD="redis_password"
-REDIS_HOST="localhost"
-REDIS_PORT=6379
-SITE_FRONTEND_URL="https://doorsid.com"
-SITE_API_URL="https://api.doorsid.com"
-NO_REPLY_EMAIL="No Reply"
-MAILGUN_API_KEY=""
-JWKS_KEYPAIR_FILE="ProtectedResources/keypair.jwks"
+DEPLOYMENT_ENVIRONMENT='production'
+DEPLOYMENT_ENVIRONMENT_SHORT='prod'
+APP_PORT=8082
+DATABASE_HOST='localhost'
+DATABASE_PORT=5434
+DATABASE_USERNAME='vapor_username'
+DATABASE_PASSWORD='vapor_password'
+DATABASE_NAME='doors_database'
+REDIS_USERNAME=''
+REDIS_PASSWORD='redis_password'
+REDIS_HOST='localhost'
+REDIS_PORT=6381
+SITE_FRONTEND_URL='https://doorsid.com'
+SITE_API_URL='https://api.doorsid.com'
+NO_REPLY_EMAIL='No Reply'
+MAILGUN_API_KEY=''
+JWKS_KEYPAIR_FILE='ProtectedResources/keypair.jwks'
