--- a/.env.staging
+++ b/.env.staging
@@ -1,17 +1,17 @@
-APP_PORT=8080
-DEPLOYMENT_ENVIRONMENT='development'
-DEPLOYMENT_ENVIRONMENT_SHORT='dev'
+APP_PORT=8081
+DEPLOYMENT_ENVIRONMENT='staging'
+DEPLOYMENT_ENVIRONMENT_SHORT='stage'
 DATABASE_HOST='localhost'
-DATABASE_PORT=5432
+DATABASE_PORT=5433
 DATABASE_USERNAME='vapor_username'
 DATABASE_PASSWORD='vapor_password'
 DATABASE_NAME='doors_database'
 REDIS_USERNAME=''
 REDIS_PASSWORD='redis_password'
 REDIS_HOST='localhost'
-REDIS_PORT=6379
-SITE_FRONTEND_URL='https://dev.doorsid-com.recolourmusic.com'
-SITE_API_URL='https://dev.api.doorsid-com.recolourmusic.com'
+REDIS_PORT=6380
+SITE_FRONTEND_URL='https://stage.doorsid-com.recolourmusic.com'
+SITE_API_URL='https://stage.api.doorsid-com.recolourmusic.com'
 NO_REPLY_EMAIL='No Reply'
 MAILGUN_API_KEY=''
 JWKS_KEYPAIR_FILE='ProtectedResources/keypair.jwks'
