--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -47,9 +47,9 @@ services:
     depends_on:
       - db-${DEPLOYMENT_ENVIRONMENT_SHORT}
     ports:
-      - ${APP_PORT}:8080
+      - ${APP_PORT}:${APP_PORT}
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
+    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "${APP_PORT}"]
 
   # api.doorsid.com-migrate:
   #   image: api.doorsid.com:latest
