DRS-13.2: Basic Setup: Environments: Refactor

--- a/.env.development
+++ b/.env.development
@@ -1,16 +1,7 @@
-APP_PORT=8080
 DEPLOYMENT_ENVIRONMENT=development
 DEPLOYMENT_ENVIRONMENT_SHORT=dev
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=vapor_username
-DATABASE_PASSWORD=vapor_password
-DATABASE_NAME=doors_database
-REDIS_PASSWORD=redis_password
-REDIS_HOST=localhost
-REDIS_PORT=6379
+APP_PORT=8080
+DATABASE_HOST=db-dev
+REDIS_HOST=redis-dev
 SITE_FRONTEND_URL=https://dev.doorsid-com.recolourmusic.com
 SITE_API_URL=https://dev.api.doorsid-com.recolourmusic.com
-NO_REPLY_EMAIL=NoReply
-JWKS_KEYPAIR_FILE=ProtectedResources/keypair.jwks
-MAILGUN_API_KEY=key
