--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,7 @@
 DEPLOYMENT_ENVIRONMENT=production
 DEPLOYMENT_ENVIRONMENT_SHORT=prod
 APP_PORT=8082
-DATABASE_HOST=localhost
-DATABASE_PORT=5434
-DATABASE_USERNAME=vapor_username
-DATABASE_PASSWORD=vapor_password
-DATABASE_NAME=doors_database
-REDIS_PASSWORD=redis_password
-REDIS_HOST=localhost
-REDIS_PORT=6381
+DATABASE_HOST=db-prod
+REDIS_HOST=redis-prod
 SITE_FRONTEND_URL=https://doorsid.com
 SITE_API_URL=https://api.doorsid.com
-NO_REPLY_EMAIL=NoReply
-JWKS_KEYPAIR_FILE=ProtectedResources/keypair.jwks
-MAILGUN_API_KEY=key
