--- a/.env.staging
+++ b/.env.staging
@@ -1,16 +1,7 @@
-APP_PORT=8081
 DEPLOYMENT_ENVIRONMENT=staging
 DEPLOYMENT_ENVIRONMENT_SHORT=stage
-DATABASE_HOST=localhost
-DATABASE_PORT=5433
-DATABASE_USERNAME=vapor_username
-DATABASE_PASSWORD=vapor_password
-DATABASE_NAME=doors_database
-REDIS_PASSWORD=redis_password
-REDIS_HOST=localhost
-REDIS_PORT=6380
+APP_PORT=8081
+DATABASE_HOST=db-stage
+REDIS_HOST=redis-stage
 SITE_FRONTEND_URL=https://stage.doorsid-com.recolourmusic.com
 SITE_API_URL=https://stage.api.doorsid-com.recolourmusic.com
-NO_REPLY_EMAIL=NoReply
-JWKS_KEYPAIR_FILE=ProtectedResources/keypair.jwks
-MAILGUN_API_KEY=key
