--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,14 @@
+DATABASE_PORT=5432
+DATABASE_USERNAME=vapor_username
+DATABASE_PASSWORD=vapor_password
+DATABASE_NAME=doors_database
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password
+NO_REPLY_EMAIL=NoReply
+JWKS_KEYPAIR_FILE=ProtectedResources/keypair.jwks
+MAILGUN_API_KEY=key
+
+
 DEPLOYMENT_ENVIRONMENT=staging
 DEPLOYMENT_ENVIRONMENT_SHORT=stage
 APP_PORT=8081
