DRS-13.2.1: Basic Setup: Environments: Development: Return localhost using

--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@ MAILGUN_API_KEY=key
 DEPLOYMENT_ENVIRONMENT=development
 DEPLOYMENT_ENVIRONMENT_SHORT=dev
 APP_PORT=8080
-DATABASE_HOST=db-dev
-REDIS_HOST=redis-dev
+DATABASE_HOST=localhost
+REDIS_HOST=localhost
 SITE_FRONTEND_URL=https://dev.doorsid-com.recolourmusic.com
 SITE_API_URL=https://dev.api.doorsid-com.recolourmusic.com
