DRS-13.2: Basic Setup: Environments: Add & use default db & redis ports

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,9 @@
+DEFAULT_DATABASE_PORT=5432
 DATABASE_PORT=5432
 DATABASE_USERNAME=vapor_username
 DATABASE_PASSWORD=vapor_password
 DATABASE_NAME=doors_database
+DEFAULT_REDIS_PORT=6379
 REDIS_PORT=6379
 REDIS_PASSWORD=redis_password
 NO_REPLY_EMAIL=NoReply
