--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -17,7 +17,7 @@ services:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
-      - ${DATABASE_PORT}:5432
+      - ${DATABASE_PORT}:${DEFAULT_DATABASE_PORT}
 
   redis-${DEPLOYMENT_ENVIRONMENT_SHORT}:
     image: bitnami/redis:5.0
@@ -29,7 +29,7 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_DISABLE_COMMANDS: FLUSHDB,FLUSHALL
     ports:
-      - ${REDIS_PORT}:6379
+      - ${REDIS_PORT}:${DEFAULT_REDIS_PORT}
 
   # db-test:
   #   image: postgres
