DRS-13.2: Basic Setup: Environments: Another fix db_data volumes

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     container_name: db-${DEPLOYMENT_ENVIRONMENT_SHORT}
     volumes:
-      - db_data-${DEPLOYMENT_ENVIRONMENT_SHORT}:/var/lib/postgresql/data/pgdata
+      - "./db_data-${DEPLOYMENT_ENVIRONMENT_SHORT}:/var/lib/postgresql/data/pgdata"
     restart: always
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
